--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@
     width: 90vw;
     margin: 1rem 1rem;
     position: relative;
+    margin-bottom: 10em;
+    
   }
   .page1 {
     height: 10vh;
@@ -22,6 +24,20 @@
     gap: 50px;
     position: absolute;
   }
+  .page2 {
+    height: 10vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    position: absolute;
+    transform: translateX(-200%);
+    transition: transform 0.3s ease;
+    padding: 20px;
+   background-color: #fff;
+   border-radius: 8px;
+  }
+
   img {
     width: 1.5rem;
   }
@@ -85,14 +101,6 @@
     font-weight: bold;
   }
 
-  .pincode_result{
-    height: 90vh;
-    width: 90vw;
-    margin-left: 40%;
-    position: relative;
-  
-  }
-  
   .progress-bar {
     display: flex;
     gap: 4px;
@@ -111,8 +119,6 @@
   .message{
     color: rgb(105, 199, 105);
     padding-top: 10px;
-  }.page2{
-    transform: translateX(-200%)
   }
 }
 
